add form to add posts and changed index page to dispaly all posts

--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,8 @@ RewriteEngine On    # Turn on the rewriting engine
 RewriteRule     ^$       index.php [NC,N]
 
 # Handle requests for "login"
-RewriteRule     login    login.html    [NC,L]
+RewriteRule     Login    login.html    [L]
+RewriteRule     app/auth/login.php   app/auth/login.php   [NC,L]
+
+# Handle requests for "newpost"
+RewriteRule     Newpost   newPostForm.php   [L]
